No need for `ImmutableList.of(...)`
Use `java.util.List.of(...)` instead